# poc-lightspeed-agentic

./: NOTES.md  README.md  SLIDES.md  config.yaml  pyproject.toml
src/: README.md  constants.py  log.py  main.py
src/agents/: README.md  __init__.py  factory.py  output_types.py  registry.py
src/app/: README.md  __init__.py  routers.py
src/app/endpoints/: README.md  __init__.py  agents.py  health.py  query.py  workflow.py  workflows.py
src/config/: README.md  __init__.py  loader.py  models.py
src/models/: README.md  __init__.py  requests.py  responses.py
src/providers/: README.md  __init__.py  llama_stack.py
src/runners/: README.md  __init__.py  uvicorn.py
src/workflows/: README.md  __init__.py  builder.py  factory.py  nodes.py  registry.py  runner.py  state.py  workflow.py
